# Stencil-Codes

./: .gitignore  README.md
benchmark/1d_stencil/: 1d_stencil.cpp  CMakeLists.txt  communicator.hpp  stencil.hpp
benchmark/2d_stencil/: CMakeLists.txt  stencil_parallel_double.cpp  stencil_parallel_float.cpp  stencil_parallel_ndouble.cpp  stencil_parallel_nfloat.cpp  stencil_serial.cpp
benchmark/2d_stencil/include/: grid.hpp  stencil.hpp  stencil_types.hpp
